# ci-medic

./: .gitignore  Dockerfile  README.md  action.yml  pull.sh  pyproject.toml
docs/: github-actions.md  jenkins.md  redaction.md
examples/: .ci-medic.yml  triage.yml
src/ci_medic/: __init__.py  cli.py  config.py  fetch_github.py  schema.py
src/ci_medic/llm/: anthropic.py  base.py  ollama.py  openai.py  openai_compat.py  prompt.py
src/ci_medic/preprocess/: ansi.py  dedupe.py  fingerprint.py  normalize.py  redact.py  windows.py
src/ci_medic/report/: comment.py  render.py  summary.py
tests/: eval.py  test_preprocess_basic.py  test_redact.py
tests/fixtures/: labels.jsonl
