[project]
name = "ci-medic"
version = "0.1.0"
description = "CI log triage and root-cause analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.0",
]

[project.scripts]
ci-medic = "ci_medic.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
